Special handling of Boost linking properties for Visual Studio.  This was necessary for me to make things link correctly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,14 @@ if(Boost_MAJOR_VERSION EQUAL 1 AND Boost_MINOR_VERSION GREATER 45)
 
 endif(Boost_MAJOR_VERSION EQUAL 1 AND Boost_MINOR_VERSION GREATER 45)
 
+# On Windows, automatic linking is performed, so we don't need to worry about
+# it.  Clear the list of libraries to link against and let Visual Studio handle
+# it.
+if (WIN32)
+  link_directories(${Boost_LIBRARY_DIRS})
+  set(Boost_LIBRARIES "")
+endif (WIN32)
+
 # For Boost testing framework (will have no effect on non-testing executables).
 # This specifies to Boost that we are dynamically linking to the Boost test
 # library.
