--- a/src/mlpack/methods/det/CMakeLists.txt
+++ b/src/mlpack/methods/det/CMakeLists.txt
@@ -19,7 +19,7 @@ foreach(file ${SOURCES})
   set(DIR_SRCS ${DIR_SRCS} ${CMAKE_CURRENT_SOURCE_DIR}/${file})
 endforeach()
 # append sources (with directory name) to list of all MLPACK sources (used at the parent scope)
-set(MLPACK_CONTRIB_SRCS ${MLPACK_CONTRIB_SRCS} ${DIR_SRCS} PARENT_SCOPE)
+set(MLPACK_SRCS ${MLPACK_SRCS} ${DIR_SRCS} PARENT_SCOPE)
 
 # executable
 add_executable(dt_main
@@ -27,6 +27,6 @@ add_executable(dt_main
 )
 # link dependencies of executable
 target_link_libraries(dt_main
-  ${MLPACK_LIBRARY}
-  contrib_pram
+  mlpack
 )
+install(TARGETS dt_main RUNTIME DESTINATION bin)
