An implementation of cover trees.  It is not yet polished, and the debugging comments are still inside of it (though commented out).  I will be polishing it shortly...

--- a/src/mlpack/core/tree/CMakeLists.txt
+++ b/src/mlpack/core/tree/CMakeLists.txt
@@ -8,6 +8,8 @@ set(SOURCES
   binary_space_tree.hpp
   binary_space_tree_impl.hpp
   bounds.hpp
+  cover_tree.hpp
+  cover_tree_impl.hpp
   hrectbound.hpp
   hrectbound_impl.hpp
   periodichrectbound.hpp
