Allow template parameter class to specify which point should be chosen as the root node.  Document template parameters a little bit (but hopefully this will be redone at some point).

--- a/src/mlpack/core/tree/CMakeLists.txt
+++ b/src/mlpack/core/tree/CMakeLists.txt
@@ -10,6 +10,7 @@ set(SOURCES
   bounds.hpp
   cover_tree.hpp
   cover_tree_impl.hpp
+  first_point_is_root.hpp
   hrectbound.hpp
   hrectbound_impl.hpp
   periodichrectbound.hpp
