Add a single-tree depth-first traverser.  It is not as fast as it could be.

--- a/src/mlpack/core/tree/CMakeLists.txt
+++ b/src/mlpack/core/tree/CMakeLists.txt
@@ -17,6 +17,7 @@ set(SOURCES
   periodichrectbound_impl.hpp
   statistic.hpp
   mrkd_statistic.hpp
+  traversers/single_tree_depth_first_traverser.hpp
 )
 
 # add directory name to sources
