--- a/src/mlpack/tests/CMakeLists.txt
+++ b/src/mlpack/tests/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(mlpack_test
   local_coordinate_coding_test.cpp
   lrsdp_test.cpp
   math_test.cpp
+  max_ip_test.cpp
   nbc_test.cpp
   nca_test.cpp
   pca_test.cpp
