Check in mess of MaxIP code which is being cleaned little by little...

--- a/src/mlpack/methods/maxip/CMakeLists.txt
+++ b/src/mlpack/methods/maxip/CMakeLists.txt
@@ -27,4 +27,11 @@ target_link_libraries(maxip
   mlpack
 )
 
+#add_executable(maxip_string
+#  max_ip_string_main.cpp
+#)
+#target_link_libraries(maxip_string
+#  mlpack
+#)
+
 install(TARGETS maxip RUNTIME DESTINATION bin)
