--- a/src/mlpack/methods/nmf/CMakeLists.txt
+++ b/src/mlpack/methods/nmf/CMakeLists.txt
@@ -5,6 +5,7 @@ cmake_minimum_required(VERSION 2.8)
 set(SOURCES
   mdistupdate.hpp
   mdivupdate.hpp
+  randominit.hpp
   nmf.hpp
   nmf_impl.hpp
 )
