Add PSpectrumStringKernel to be used for maxip/FMKS.

--- a/src/mlpack/core/kernels/CMakeLists.txt
+++ b/src/mlpack/core/kernels/CMakeLists.txt
@@ -14,6 +14,9 @@ set(SOURCES
   laplacian_kernel.hpp
   linear_kernel.hpp
   polynomial_kernel.hpp
+  pspectrum_string_kernel.hpp
+  pspectrum_string_kernel_impl.hpp
+  pspectrum_string_kernel.cpp
   spherical_kernel.hpp
   triangular_kernel.hpp
 )
