#164: Any objects passed into a prefixedoutstream that contain a std::string ToString() const method will write the results of the ToString method instead of simply being passed directly into the prefixedoutstream.
Still need to document and organize.

--- a/src/mlpack/core/util/CMakeLists.txt
+++ b/src/mlpack/core/util/CMakeLists.txt
@@ -20,6 +20,7 @@ set(SOURCES
   save_restore_utility.hpp
   save_restore_utility.cpp
   save_restore_utility_impl.hpp
+  sfinae_utility.hpp
   timers.hpp
   timers.cpp
 )
