--- a/src/mlpack/tests/CMakeLists.txt
+++ b/src/mlpack/tests/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(mlpack_test
   mlpack_test.cpp
   allkfn_test.cpp
   allknn_test.cpp
+  arma_extend_test.cpp
   aug_lagrangian_test.cpp
   cli_test.cpp
   distribution_test.cpp
