Clean up configuration so that MLPACK will compile on systems without MATLAB. Also handle CMake policies more gracefully; I can't believe CMake just doesn't ignore policies it doesn't know about.  Poor design...

--- a/src/mlpack/bindings/matlab/CMakeLists.txt
+++ b/src/mlpack/bindings/matlab/CMakeLists.txt
@@ -2,10 +2,21 @@
 # non-Linux systems.
 
 # We need the mex compiler for this to work.
-find_package(MatlabMex REQUIRED)
+find_package(MatlabMex)
 
-# Ignore the fact that we are setting CMAKE_SHARED_LIBRARY_CXX_FLAGS.
-cmake_policy(SET CMP0018 OLD)
+if(NOT "${MATLAB_MEX}")
+  message(STATUS
+      "MATLAB mex compiler not found; MATLAB bindings will not be built.")
+  message(STATUS "If MATLAB is installed, try specifying MATLAB_ROOT.")
+  return()
+endif(NOT "${MATLAB_MEX}")
+
+# Ignore the fact that we are setting CMAKE_SHARED_LIBRARY_CXX_FLAGS on CMake
+# 2.8.9 and newer.  Because we are requiring at least CMake 2.8.5, we only have
+# to check the patch version.
+if(${CMAKE_PATCH_VERSION} GREATER 8)
+  cmake_policy(SET CMP0018 OLD)
+endif(${CMAKE_PATCH_VERSION} GREATER 8)
 
 # Use the mex compiler to compile.
 set(CMAKE_CXX_COMPILER "${MATLAB_MEX}")
