Change name of output and update MATLAB binding accordingly.

--- a/src/mlpack/bindings/matlab/emst/CMakeLists.txt
+++ b/src/mlpack/bindings/matlab/emst/CMakeLists.txt
@@ -1,16 +1,12 @@
 # Simple rules for building mex file.  The _mex suffix is necessary to avoid
-# target name conflicts.
+# target name conflicts, and the mex file must have a different name than the .m
+# file.
 add_library(emst_mex SHARED
   emst.cpp
 )
 target_link_libraries(emst_mex
   mlpack
   ${LIBXML2_LIBRARIES}
-)
-
-# Change the name of the output library.
-set_target_properties(emst_mex
-  PROPERTIES OUTPUT_NAME emst
 )
 
 # Installation rule.  Install both the mex and the MATLAB file.
