Add a test for SGD.

--- a/src/mlpack/tests/CMakeLists.txt
+++ b/src/mlpack/tests/CMakeLists.txt
@@ -28,6 +28,7 @@ add_executable(mlpack_test
   radical_test.cpp
   range_search_test.cpp
   save_restore_utility_test.cpp
+  sgd_test.cpp
   sort_policy_test.cpp
   sparse_coding_test.cpp
   tree_test.cpp
