Add test for tree traits.

--- a/src/mlpack/tests/CMakeLists.txt
+++ b/src/mlpack/tests/CMakeLists.txt
@@ -7,6 +7,7 @@ add_executable(mlpack_test
   arma_extend_test.cpp
   aug_lagrangian_test.cpp
   cli_test.cpp
+  det_test.cpp
   distribution_test.cpp
   emst_test.cpp
   fastmks_test.cpp
@@ -34,8 +35,8 @@ add_executable(mlpack_test
   sort_policy_test.cpp
   sparse_coding_test.cpp
   tree_test.cpp
+  tree_traits_test.cpp
   union_find_test.cpp
-  det_test.cpp
 )
 # Link dependencies of test executable.
 target_link_libraries(mlpack_test
