--- a/src/mlpack/methods/range_search/CMakeLists.txt
+++ b/src/mlpack/methods/range_search/CMakeLists.txt
@@ -3,6 +3,8 @@
 set(SOURCES
   range_search.hpp
   range_search_impl.hpp
+  range_search_rules.hpp
+  range_search_rules_impl.hpp
 )
 
 # Add directory name to sources.
