Do not compile DET code on Windows because it causes the compiler to segfault. Sigh...

--- a/src/mlpack/methods/CMakeLists.txt
+++ b/src/mlpack/methods/CMakeLists.txt
@@ -1,6 +1,5 @@
-## recurse
+## Recurse into different methods.
 set(DIRS
-  det
   emst
   fastmks
   gmm
@@ -22,6 +21,10 @@ set(DIRS
   rann
   sparse_coding
 )
+# Density estimation trees fail on Windows.
+if (NOT WIN32)
+  set(DIRS ${DIRS} det)
+endif (NOT WIN32)
 
 foreach(dir ${DIRS})
     add_subdirectory(${dir})
