Add a test for the KernelTraits class, and a long rant which explains why this checkin didn't happen two hours ago.

--- a/src/mlpack/tests/CMakeLists.txt
+++ b/src/mlpack/tests/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(mlpack_test
   hmm_test.cpp
   kernel_test.cpp
   kernel_pca_test.cpp
+  kernel_traits_test.cpp
   kmeans_test.cpp
   lars_test.cpp
   lbfgs_test.cpp
