--- a/src/mlpack/methods/range_search/CMakeLists.txt
+++ b/src/mlpack/methods/range_search/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SOURCES
   range_search_impl.hpp
   range_search_rules.hpp
   range_search_rules_impl.hpp
+  range_search_stat.hpp
 )
 
 # Add directory name to sources.
