Refactor EMFit<> so that the covariance constraint is a template parameter, and update other components accordingly.

--- a/src/mlpack/methods/gmm/CMakeLists.txt
+++ b/src/mlpack/methods/gmm/CMakeLists.txt
@@ -3,7 +3,9 @@
 set(SOURCES
   gmm.hpp
   gmm_impl.hpp
+  no_constraint.hpp
   phi.hpp
+  positive_definite_covariance.hpp
   em_fit.hpp
   em_fit_impl.hpp
 )
